--- a/core/app/src/main/res/layout/note_play_ground.xml
+++ b/core/app/src/main/res/layout/note_play_ground.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".NotePlayGround">
 
-    <com.example.digitalink.views.NoteView
+    <com.example.canvas.views.NoteView
         android:id="@+id/drawingView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,6 +37,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/clear"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ScrollView
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:background="#41000000"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/listQuickSuggestions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clear"
