--- a/core/app/src/main/res/layout/note_play_ground.xml
+++ b/core/app/src/main/res/layout/note_play_ground.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".NotePlayGround">
 
-    <com.example.canvas.views.NoteView
+    <com.example.canvas.views.NoteCanvas
         android:id="@+id/drawingView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,6 +39,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
+        android:id="@+id/listQuickSuggestionsView"
         android:layout_width="100dp"
         android:layout_height="match_parent"
         android:background="#41000000"
